--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 </div>
-<div
+<!-- <div
   class="modal fade"
   id="terms"
   tabindex="-1"
@@ -71,4 +71,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
