--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,167 +4,93 @@
       <div class="col-md-3 register-left">
         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
         <h3>Welcome !</h3>
+        <input type="submit" name="" value="Login" onclick="location.href = 'http://localhost:4200/login';" /><br />
+        <p>Already Register ?</p>
       </div>
       <div class="col-md-9 register-right">
         <div class="tab-content" id="myTabContent">
-          <div
-            class="tab-pane fade show active"
-            id="home"
-            role="tabpanel"
-            aria-labelledby="home-tab"
-          >
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             <h3 class="register-heading">Register here..</h3>
             <div class="row register-form">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="First Name *"
-                    name="firstName"
-                    [(ngModel)]="user.firstName"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="First Name *" name="firstName"
+                    [(ngModel)]="user.firstName" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Last Name *"
-                    name="lastName"
-                    [(ngModel)]="user.lastName"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="Last Name *" name="lastName"
+                    [(ngModel)]="user.lastName" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="date"
-                    class="form-control"
-                    placeholder="Date of Birth"
-                    name="dateOfBirth"
-                    [(ngModel)]="user.dateOfBirth"
-                    required
-                  />
+                  <input type="date" class="form-control" placeholder="Date of Birth" name="dateOfBirth"
+                    [(ngModel)]="user.dateOfBirth" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Address *"
-                    name="address"
-                    [(ngModel)]="user.address"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="Address *" name="address"
+                    [(ngModel)]="user.address" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="text"
-                    minlength="10"
-                    maxlength="10"
-                    name="txtEmpPhone"
-                    class="form-control"
-                    placeholder="Your Phone *"
-                    name="mobileNo"
-                    [(ngModel)]="user.mobileNo"
-                    required
-                  />
+                  <input type="tel" #mobileNo="ngModel" pattern="[0-9]{10}" minlength="10" maxlength="10"
+                    name="txtEmpPhone" class="form-control" placeholder="Your Phone *" name="mobileNo"
+                    [(ngModel)]="user.mobileNo" required />
+                </div>
+                <!-- <div style="color:red;" *ngIf="mobileNo.invalid && (mobileNo.dirty || mobileNo.touched)">
+                  <div *ngIf="mobileNo.errors?.required">Number cannot be empty</div>
+                  <div *ngIf="mobileNo.errors?.pattern">Must contain 10 number</div>
+                </div> -->
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email Address *" name="emailId"
+                    [(ngModel)]="user.emailId" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Email Address *"
-                    name="emailId"
-                    [(ngModel)]="user.emailId"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Bank name *"
-                    name="bankName"
-                    [(ngModel)]="user.bankName"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="Bank name *" name="bankName"
+                    [(ngModel)]="user.bankName" required />
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input
-                    type="number"
-                    class="form-control"
-                    placeholder="Account No *"
-                    name="accountNo"
-                    [(ngModel)]="user.accountNo"
-                    required
-                  />
+                  <input type="number" class="form-control" placeholder="Account No *" name="accountNo"
+                    [(ngModel)]="user.accountNo" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="IFSC Code *"
-                    name="ifscCode"
-                    [(ngModel)]="user.ifscCode"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="IFSC Code *" name="ifscCode"
+                    [(ngModel)]="user.ifscCode" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="PAN card No *"
-                    name="pancardNumber"
-                    [(ngModel)]="user.pancardNumber"
-                    required
-                  />
+                  <input type="text" class="form-control" placeholder="PAN card No *" name="pancardNumber"
+                    [(ngModel)]="user.pancardNumber" required />
                 </div>
                 <div class="form-group">
-                  <input
-                    type="number"
-                    class="form-control"
-                    placeholder="Aadhar Card No *"
-                    name="aadharNumber"
-                    [(ngModel)]="user.aadharNumber"
-                    required
-                  />
+                  <input type="text" #aadharNumber="ngModel" pattern="[0-9]{12}"  maxlength="12" class="form-control" placeholder="Aadhar Card No *" name="aadharNumber"
+                    [(ngModel)]="user.aadharNumber" required />
                 </div>
+                <!-- <div style="color:red;" *ngIf="aadharNumber.invalid && (aadharNumber.dirty || aadharNumber.touched)">
+                  <div *ngIf="aadharNumber.errors?.required">Aadhar Number cannot be empty</div>
+                  <div *ngIf="aadharNumber.errors?.pattern">Must contain 12 number</div>
+                </div> -->
                 <div class="form-group">
                   <div class="maxl">
                     <label class="radio inline">
-                      <input
-                        type="radio"
-                        name="cardType"
-                        value="gold"
-                        [(ngModel)]="user.cardType"
-                        checked
-                      />
+                      <input type="radio" name="cardType" value="gold" [(ngModel)]="user.cardType" checked />
                       <span> Gold </span>&nbsp;
                     </label>
                     <label class="radio inline">
-                      <input
-                        type="radio"
-                        name="cardType"
-                        [(ngModel)]="user.cardType"
-                        value="platinum"
-                      />
+                      <input type="radio" name="cardType" [(ngModel)]="user.cardType" value="platinum" />
                       <span> Platinum </span>
                     </label>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <input
-                    type="password"
-                    class="form-control"
-                    placeholder="Password *"
-                    name="password"
-                    [(ngModel)]="user.password"
-                    required
-                  />
+                  <input type="password" #password="ngModel" class="form-control" placeholder="Password *"
+                    name="password" [(ngModel)]="user.password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    required />
                 </div>
+                <div style="color: red;" *ngIf="password.invalid && (password.dirty || password.touched)">
+                  <div *ngIf="password.errors?.required">Password cannot be empty</div>
+                  <div *ngIf="password.errors?.pattern">Must follow pattern</div>
+                </div>
+
                 <input type="submit" class="btnRegister" value="Register" />
               </div>
             </div>
