added pay joining fee and admin dashboard components

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -137,7 +137,7 @@
                       <input
                         type="radio"
                         name="cardType"
-                        value="gold"
+                        value="Gold"
                         [(ngModel)]="user.cardType"
                         checked
                       />
@@ -148,9 +148,9 @@
                         type="radio"
                         name="cardType"
                         [(ngModel)]="user.cardType"
-                        value="platinum"
+                        value="Titanium"
                       />
-                      <span> Platinum </span>
+                      <span> Titaninum </span>
                     </label>
                   </div>
                 </div>
