forgot pswd not working

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <form #changepwd="ngForm" (ngSubmit)="changePwd()">
+          <form #changepwd="ngForm" (ngSubmit)="changePassword()">
             <div class="card2 card border-0 px-4 py-5">
               <div class="row px-3">
                 <label class="mb-1">
@@ -30,7 +30,7 @@
                   type="password"
                   name="password"
                   placeholder="Enter a valid email password"
-                  [(ngModel)]="changepwd.password"
+                  [(ngModel)]="newPswd.password"
                   #newpwd="ngModel"
                 />
               </div>
@@ -42,14 +42,18 @@
                   type="password"
                   name="repassword"
                   placeholder="Enter Password Again"
-                  
+                  [(ngModel)]="confirmPswd"
                   #repwd="ngModel"
-                  pattern="{{ newpwd.value }}"
+                  pattern="{{ confirmPswd }}"
                 />
               </div>
-              <div class="row px-3" *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)">
-                <div style="color: red;">Both passwords dont match</div>  <!-- question mark to supress the null object error-->
-            </div> 
+              <div
+                class="row px-3"
+                *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)"
+              >
+                <div style="color: red">Both passwords dont match</div>
+                <!-- question mark to supress the null object error-->
+              </div>
               <div class="row mb-3 px-3">
                 <button type="submit" class="btn btn-blue text-center">
                   Update
@@ -57,8 +61,6 @@
               </div>
             </div>
           </form>
-
-          
         </div>
       </div>
       <div class="bg-blue py-4">
