--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -21,37 +21,37 @@
         <li class="nav-item active">
           <a class="nav-link" (click)="viewAllNotCardHolders()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>viewAllNotCardHolders</p>
+            <p>Generate card for users</p>
           </a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" (click)="viewAllCardHolders()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>viewAllCardHolders</p>
+            <p>Card holders</p>
           </a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" (click)="viewCardHoldersByType()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>viewCardHoldersByType</p>
+            <p>Search card holders by card type</p>
           </a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" (click)="addProduct()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>AddProduct</p>
+            <p>Add product</p>
           </a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" (click)="addFaq()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>AddFAQForProduct</p>
+            <p>Add FAQ for product</p>
           </a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" (click)="allProducts()">
             <!-- <i class="material-icons">viewAllNotCardHolders</i> -->
-            <p>viewAllProducts</p>
+            <p>View all products</p>
           </a>
         </li>
         <!-- your sidebar here -->
@@ -65,9 +65,7 @@
     >
       <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-brand" [routerLink]="['/adminDashboard']"
-            >Dashboard</a
-          >
+          <b>Welcome back {{ adminName }}!!</b>
         </div>
         <button
           class="navbar-toggler"
@@ -85,7 +83,7 @@
         <div class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/login']">
+              <a class="nav-link" (click)="logout()">
                 <!-- <i class="material-icons">notifications</i> -->
                 Logout
               </a>
