--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button
     class="navbar-toggler"
     type="button"
@@ -25,4 +25,49 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a
+      class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
+      href="javascript:void(0)"
+      onclick="myFunction()"
+      title="Toggle Navigation Menu"
+      ><i class="fa fa-bars"></i
+    ></a>
+    <a [routerLink]="['/home']" class="w3-bar-item w3-button w3-padding-large"
+      >Home</a
+    >
+    <a
+      [routerLink]="['/login']"
+      class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+      >Login</a
+    >
+    <a
+      [routerLink]="['/register']"
+      class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+      >Register</a
+    >
+    <a
+      [routerLink]="['/products']"
+      class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+      >Products</a
+    >
+    <a
+      href="#aboutus"
+      class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+      >About us</a
+    >
+  </div>
+</div>
+
+<script>
+  function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else {
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+</script>
