added session and header

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -44,7 +44,7 @@
                   placeholder="Enter Password Again"
                   [(ngModel)]="confirmPswd"
                   #repwd="ngModel"
-                  pattern="{{ confirmPswd }}"
+                  pattern="{{ newpwd.value }}"
                 />
               </div>
               <div
