--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -126,7 +126,7 @@
                             <p class="w3-opacity">₹2000-₹100000</p>
                             <p>One can expect an agreement between philosophers sooner than between clocks.</p>
                             <button class="w3-button w3-black w3-margin-bottom"
-                            onclick="location.href = 'http://localhost:4200/products';">View
+                            [routerLink]="['/products']" (click)="viewProductByType('Watch')">View
                             </button>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
         </div>
 
         <!-- The Contact Section -->
-        <div class="w3-container w3-content w3-padding-32" style="max-width:800px" id="contact">
+        <div class="w3-container w3-content w3-padding-16" style="max-width:800px" id="contact">
             <h2 class="w3-wide w3-center">Our Partners</h2>
             <p class="w3-opacity w3-center"><i></i></p>
             <div class="w3-row w3-padding-32">
