--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -205,8 +205,8 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    <!-- </div>
+  </div> -->
 
   <!-- Ticket Modal -->
   <div id="ticketModal" class="w3-modal">
