added emi-and-buy component

--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -1,3 +1,4 @@
+<b>Add product details</b>
 <form #productForm="ngForm" (ngSubmit)="addProduct()">
   <div class="form-group">
     <label>Product Name :</label>
