--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -2,7 +2,7 @@
   <label><b>Product name :</b></label>
   {{ product.productName }}<br />
   <label><b>Product price :</b></label>
-  {{ product.price }}<br />
+  &#8360; {{ product.price }}<br />
   <label><b>Product type :</b></label>
   {{ product.productType }}<br />
   <label><b>Product description :</b></label>
