--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -78,15 +78,15 @@
     </h4>
     <div class="w3-row w3-padding-32">
       <div class="w3-third" style="width: 50%">
-        <h3>Platinum</h3>
+        <h3>Titanium</h3>
         <img src="https://cdn.comparecards.com/uploads/images/items/4334.jpg" class="w3-round w3-margin-bottom"
-          alt="Random Name" style="width: 60%" />
+          alt="Random Name" style="width: 80%" />
       </div>
 
       <div class="w3-third" style="float: right; width: 50%">
         <h3>Gold</h3>
         <img src="https://icm.aexp-static.com/Internet/internationalcardshop/en_in/images/cards/Gold_Card.png"
-          class="w3-round" alt="Random Name" style="width: 60%" />
+          class="w3-round" alt="Random Name" style="width: 80%" />
       </div>
     </div>
   </div>
