updated admin dashboard

--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -140,7 +140,7 @@
         <!-- addProduct  -->
         <app-add-product *ngIf="addproduct"></app-add-product>
 
-        <app-add-faq *ngIf="addFaq"></app-add-faq>
+        <app-add-faq *ngIf="addFAQ"></app-add-faq>
 
         <!-- allProducts -->
         <app-product-list *ngIf="allproduct"></app-product-list>
