--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -1,51 +1,64 @@
 <head>
-<style>
-table, td, th {
-  border: 2px solid black;
-}
+  <style>
+    table,
+    td,
+    th {
+      border: 2px solid black;
+    }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-</style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+  </style>
 </head>
-<app-header></app-header><br><br><br><br>
+<app-header></app-header><br /><br /><br /><br />
 <div id="pdf">
-<h2 style="text-align: center">Transaction Invoice </h2><br><hr>
-<h6 style=" margin-left: 228px;">Name : </h6> {{userName}}<br>
-<h6 style=" margin-left: 228px;">Date of Transaction : </h6>{{ transaction.transaction_date }}  {{ transaction.transaction_time }}<br><hr>
+  <h2 style="text-align: center">Transaction Invoice</h2>
+  <br />
+  <hr />
+  <h6 style="margin-left: 228px">Name : {{ userName }}</h6>
+  <br />
+  <h6 style="margin-left: 228px">
+    Date of Transaction : {{ transaction.transaction_date }}
+    {{ transaction.transaction_time }}
+  </h6>
+  <br />
+  <hr />
 
-<div>
- <table class="table table-bordered" style="width: 70%;margin-left: auto;
-  margin-right: auto; " >
-            <tr>
-              <th>Transaction ID</th>
-              <td>{{ transaction.transactionId }}</td>
-            </tr>
-            <tr>
-              <th>Product Id</th>
-              <td>{{ transaction.productId }}</td>
-            </tr>
-            <tr>
-              <th>Product Name</th>
-              <td>{{ transaction.productName }}</td>
-            </tr>
-            <tr>
-              <th>Amount Paid</th>
-              <td>{{ transaction.amount_paid }}</td>
-            </tr>
-            <tr>
-              <th>EMI Scheme</th>
-              <td>{{ transaction.emiScheme }} Months</td>
-            </tr>
-             <tr>
-              <th>Payment Completion</th>
-              <td *ngIf="!emiCompleted">Pending</td>
-              <td *ngIf="emiCompleted">Completed</td>
-            </tr>
- </table>
-
+  <div>
+    <table
+      class="table table-bordered"
+      style="width: 70%; margin-left: auto; margin-right: auto"
+    >
+      <tr>
+        <th>Transaction ID</th>
+        <td>{{ transaction.transactionId }}</td>
+      </tr>
+      <tr>
+        <th>Product Id</th>
+        <td>{{ transaction.productId }}</td>
+      </tr>
+      <tr>
+        <th>Product Name</th>
+        <td>{{ transaction.productName }}</td>
+      </tr>
+      <tr>
+        <th>Amount Paid</th>
+        <td>{{ transaction.amount_paid }}</td>
+      </tr>
+      <tr>
+        <th>EMI Scheme</th>
+        <td>{{ transaction.emiScheme }} Months</td>
+      </tr>
+      <tr>
+        <th>Payment Completion</th>
+        <td *ngIf="!emiCompleted">Pending</td>
+        <td *ngIf="emiCompleted">Completed</td>
+      </tr>
+    </table>
+  </div>
 </div>
-</div>
-<button (click)="convetToPDF()" style="background:cyan; margin-left : 45%" > Generate Pdf</button>
+<button (click)="convetToPDF()" style="background: cyan; margin-left: 45%">
+  Generate Pdf
+</button>
