Completed Dashboard and PayEmi

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -48,6 +48,10 @@
         <td>{{ transaction.amount_paid }}</td>
       </tr>
       <tr>
+        <th>Amount Remaining</th>
+        <td>{{ transaction.amount_remaining }}</td>
+      </tr>
+      <tr>
         <th>EMI Scheme</th>
         <td>{{ transaction.emiScheme }} Months</td>
       </tr>
