--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -9,36 +9,38 @@
         <p *ngIf="cardTypebool; then ifb1; else else1"></p>
         <ng-template #ifb1>
             <div class="col d-flex justify-content-center">
-                <div class="card bg-dark text-white" style="width: 50%; height: 50%">
-                    <img class="card-img" src="https://image.freepik.com/free-photo/gold-background-texture_44865-93.jpg"
-                        alt="Card image" />
+                <div class="card bg-dark text-white" style="width: 50%; height: 50%; font-family: 'Big Shoulders Stencil Text', cursive;">
+                    <img class="card-img"
+                        src="../../../assets/GoldCredit.PNG"
+                        alt="Card image"/>
                     <div class="card-img-overlay">
-                        <h2 class="card-title">Card Type: Gold</h2>
-                        <h1 style="margin-left: 200px; margin-top: 150px;">{{result.cardId}}    {{result.cardId}}</h1>
-                        <h4 class="card-text" style="margin-top: 60px;">
+                        
+                        <div class="credit-font credit-card-number" style="margin-left: 150px; margin-top: 150px;font-size: 3.5rem;">4 5 6 8  6 7 5 4  5 4 2 1  8 7 5 4 </div>
+                        <div class="card-text" style="margin-top: 45px;font-size: 2rem;">
                             Name: {{userName}}
-                        </h4>
-                        <p class="card-text">Status: Activated</p>
-                        <p>Total Credit: {{totalCredit}}</p>
-                        <p>Validity Till: {{validityTill}}</p>
+                        </div>
+                        <p style="font-size: 2rem;">Total Credit: {{totalCredit}}</p>
+                        <p style="font-size: 2rem;">Credit Remaining: {{creditRemaining}}</p>
+                        <p style="font-size: 2rem;">Validity Till: {{validityTill}}</p>
+
                     </div>
                 </div>
             </div>
         </ng-template>
         <ng-template #else1>
             <div class="col d-flex justify-content-center">
-                <div class="card bg-dark text-white" style="width: 50%; height: 50%">
-                    <img class="card-img" src="https://www.teahub.io/photos/full/241-2416146_titanium-background.jpg"
-                        alt="Card image" />
+                <div class="card bg-dark text-white" style="width: 50%; height: 50%; font-family: 'Big Shoulders Stencil Text', cursive; ">
+                    <img class="card-img" src="../../../assets/TitaniumCredit.PNG"
+                        alt="Card image"/>
                     <div class="card-img-overlay">
-                        <h2 class="card-title">Card Type: Titanium</h2>
-                        <h1 style="margin-left: 200px; margin-top: 150px;">{{result.cardId}}    {{result.cardId}}</h1>
-                        <h4 class="card-text" style="margin-top: 60px;">
+                        
+                        <div class="credit-font credit-card-number" style="margin-left: 150px; margin-top: 150px;font-size: 3.5rem;">4 5 6 8  6 7 5 4  5 4 2 1  8 7 5 4 </div>
+                        <div class="card-text" style="margin-top: 14px;font-size: 2rem;">
                             Name: {{userName}}
-                        </h4>
-                        <h5 class="card-text">Status: Activated</h5>
-                        <h5>Total Credit: {{totalCredit}}</h5>
-                        <h5>Validity Till: {{validityTill}}</h5>
+                        </div>
+                        <p style="font-size: 2rem;">Total Credit: {{totalCredit}}</p>
+                        <p style="font-size: 2rem;">Credit Remaining: {{creditRemaining}}</p>
+                        <p style="font-size: 2rem;">Validity Till: {{validityTill}}</p>
                     </div>
                 </div>
             </div>
@@ -64,39 +66,100 @@
 
 
 
-    <div class="card border-dark mb-3" style="max-width: 70rem; height: 20rem; margin-bottom: 100px; margin-left: 250px; background-color: lightgray;">
-        
+    <div class="card border-dark mb-3"
+        style="max-width: 70rem; height: auto; margin-bottom: 100px; margin-left: 250px; background-color: lightgray;">
         <div class="card-body text-primary">
-          <h2 class="card-title">Transactions</h2>
-          <div class="card-group">
-            <div class="card">
-              
-              <div class="card-body">
-                <h5 class="card-title">Transaction 1</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">28/12/2020</small></p>
-              </div>
+            <h2 class="card-title">Recent Transactions</h2>
+            <div class="card-group">
+                
+                <div class="card" *ngIf="tran01!=null">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{tran01.productName}}</h5>
+                        <p class="card-text">Amount Paid: {{tran01.amount_paid}}</p>
+                        <p class="card-text">Date Of Transaction:
+                                {{tran01.transaction_date}}</p>
+                        <p class="card-text">Id:
+                                {{tran01.transactionId}}</p>
+                    </div>
+                </div>
+
+                <div class="card" *ngIf="tran02!=null" style="margin-left: 15px;margin-right: 15px;">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{tran02.productName}}</h5>
+                        <p class="card-text">Amount Paid: {{tran02.amount_paid}}</p>
+                        <p class="card-text">Date Of Transaction:
+                            {{tran02.transaction_date}}</p>
+                    <p class="card-text">Id:
+                            {{tran02.transactionId}}</p>
+                    </div>
+                </div>
+                <div class="card" *ngIf="tran03!=null">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{tran03.productName}}</h5>
+                        <p class="card-text">Amount Paid: {{tran03.amount_paid}}</p>
+                        <p class="card-text">Date Of Transaction:
+                            {{tran03.transaction_date}}</p>
+                    <p class="card-text">Id:
+                            {{tran03.transactionId}}</p>
+                    </div>
+                </div>
+
             </div>
-            <div class="card">
-              
-              <div class="card-body">
-                <h5 class="card-title">Transaction 2</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">26/12/2020</small></p>
-              </div>
-            </div>
-            <div class="card">
-              
-              <div class="card-body">
-                <h5 class="card-title">Transaction 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">24/12/2020</small></p>
-              </div>
-            </div>
-            
-          </div>
-          <button class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px;" [routerLink]="['/products']">View All</button>
+            <button class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px;"
+                [routerLink]="['/viewAllTransactions']">View All</button>
         </div>
-      </div>
-      <br>
+
+    </div>
+    <br>
+    <div class="card border-dark mb-3"
+        style="max-width: 70rem; height: auto; margin-bottom: 150px; margin-left: 250px; background-color: lightgray;">
+        <div class="card-body text-primary">
+            <h2 class="card-title">Recent Purchases</h2>
+            <div class="card-group">
+                
+                <div class="card" *ngIf="pran01!=null">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{pran01.productName}}</h5>
+                        <p class="card-text">Product Id: {{pran01.productId}}</p>
+                        <p class="card-text" *ngIf="pran01.amount_remaining>0">Amount Remaining:
+                                </p>
+                        <p class="card-text">Emi Scheme:
+                                {{pran01.emiScheme}}</p>
+                    </div>
+                </div>
+
+                <div class="card" *ngIf="pran02!=null" style="margin-left: 15px;margin-right: 15px;">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{pran02.productName}}</h5>
+                        <p class="card-text">Product Id: {{pran02.productId}}</p>
+                        <p class="card-text" *ngIf="pran02.amount_remaining>0">Amount Remaining:
+                            {{pran02.amount_remaining}}</p>
+                    <p class="card-text">Emi Scheme:
+                            {{pran02.emiScheme}}</p>
+                    </div>
+                </div>
+                <div class="card" *ngIf="pran03!=null">
+
+                    <div class="card-body">
+                        <h5 class="card-title">{{pran03.productName}}</h5>
+                        <p class="card-text">Product Id: {{pran03.productId}}</p>
+                        <p class="card-text" *ngIf="pran03.amount_remaining>0">Amount Remaining:
+                            {{pran03.amount_remaining}}</p>
+                    <p class="card-text">Emi Scheme:
+                            {{pran03.emiScheme}}</p>
+                    </div>
+                </div>
+
+            </div>
+            <button class="w3-button w3-black w3-margin-bottom" style="float: right; margin-top: 10px;"
+                [routerLink]="['/productsPurchased']">View All</button>
+        </div>
+
+    </div>
+    <br>
 </div>
