made changes for registration fee

--- a/src/app/components/add-faq/add-faq.component.html
+++ b/src/app/components/add-faq/add-faq.component.html
@@ -1,4 +1,5 @@
 <form #faqForm="ngForm" (ngSubmit)="addFaq()">
+  <b>Add Frequently asked questions for a product</b>
   <div class="form-group">
     <label>Question :</label>
     <input
@@ -27,4 +28,4 @@
     />
   </div>
   <button type="submit" class="btn btn-primary">Add FAQ</button>
-  </form>
+</form>
