--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -97,6 +97,18 @@
 
     <div class="content">
       <div class="container-fluid">
+        <!-- <a value="Gold" (click)="search()">
+          <img src="../../../assets/GoldCredit.PNG" width="40%" height="38%" />
+        </a>
+        <a value="Titanium" (click)="search()">
+          <img
+            src="../../../assets/TitaniumCredit.PNG"
+            width="40%"
+            height="40%"
+            style="margin-left: 10%"
+          />
+        </a> -->
+
         <!-- cardtypesearch -->
         <div *ngIf="type">
           <form #cardType="ngForm" (ngSubmit)="search()">
