--- a/src/app/components/pay-joining-fee/pay-joining-fee.component.html
+++ b/src/app/components/pay-joining-fee/pay-joining-fee.component.html
@@ -23,8 +23,8 @@
             <div class="row px-3">
               <div class="pay">
                 <h2>Card type : {{ cardType }}</h2>
-                <p *ngIf="flag">Pay joining of &#8377; 1000</p>
-                <p *ngIf="!flag">Pay Joining of &#8377; 2000</p>
+                <b *ngIf="flag">Pay joining of &#8377; 1000</b>
+                <b *ngIf="!flag">Pay Joining of &#8377; 2000</b>
                 <br />
               </div>
             </div>
