--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -76,8 +76,19 @@
                 </div>
 
                 <div class="form-group">
-                  <input placeholder="Date of Birth" class="form-control"  type="text" onfocus="(this.type='date')" onblur="(this.type='text')" name="dateOfBirth"
-                    [(ngModel)]="user.dateOfBirth" value="2002-01-01" max="2002-01-01" min="1900-01-01" required />
+                  <input
+                    placeholder="Date of Birth"
+                    class="form-control"
+                    type="text"
+                    onfocus="(this.type='date')"
+                    onblur="(this.type='text')"
+                    name="dateOfBirth"
+                    [(ngModel)]="user.dateOfBirth"
+                    value="2002-01-01"
+                    max="2002-01-01"
+                    min="1900-01-01"
+                    required
+                  />
                 </div>
 
                 <div class="form-group">
