--- a/src/app/components/emi-and-buy/emi-and-buy.component.html
+++ b/src/app/components/emi-and-buy/emi-and-buy.component.html
@@ -30,7 +30,7 @@
       <div>
         <br /><br />
 
-        <table class="table table-bordered" *ngIf="flag">
+        <table class="table table-bordered">
           <tr>
             <th>select</th>
             <th>EMI scheme</th>
