--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -49,7 +49,9 @@
       </tr>
       <tr>
         <th>Amount Remaining</th>
-        <td>{{ transaction.amount_remaining }}</td>
+        <td *ngIf="transaction.amount_remaining >= 0">
+          {{ transaction.amount_remaining }}
+        </td>
       </tr>
       <tr>
         <th>EMI Scheme</th>
