--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -5,52 +5,34 @@
         <div class="col-lg-6">
           <div class="card1 pb-5">
             <div class="row">
-              <img
-                src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
-                class="logo"
-              />
+              <img src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
+                class="logo" />
             </div>
             <div class="row px-3 justify-content-center mt-4 mb-5 border-line">
               <img
                 src="https://image.cnbcfm.com/api/v1/image/106318651-1577994105247gettyimages-1083493808.jpg?v=1577994157&w=1400&h=950"
-                class="image"
-              />
+                class="image" />
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5" style="margin-top: 120px">
           <form #changepwd="ngForm" (ngSubmit)="changePassword()">
             <div class="card2 card border-0 px-4 py-5">
               <div class="row px-3">
                 <label class="mb-1">
                   <h6 class="mb-0 text-sm">New Password</h6>
                 </label>
-                <input
-                  class="mb-4"
-                  type="password"
-                  name="password"
-                  placeholder="Enter a valid email password"
-                  [(ngModel)]="newPswd.password"
-                  #newpwd="ngModel"
-                />
+                <input class="mb-4" type="password" name="password" placeholder="Enter a valid email password"
+                  [(ngModel)]="newPswd.password" #newpwd="ngModel" />
               </div>
               <div class="row px-3">
                 <label class="mb-1">
                   <h6 class="mb-0 text-sm">Re-enter new password</h6>
                 </label>
-                <input
-                  type="password"
-                  name="repassword"
-                  placeholder="Enter Password Again"
-                  [(ngModel)]="confirmPswd"
-                  #repwd="ngModel"
-                  pattern="{{ newpwd.value }}"
-                />
+                <input type="password" name="repassword" placeholder="Enter Password Again" [(ngModel)]="confirmPswd"
+                  #repwd="ngModel" pattern="{{ newpwd.value }}" />
               </div>
-              <div
-                class="row px-3"
-                *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)"
-              >
+              <div class="row px-3" *ngIf="repwd.invalid && (newpwd.touched || newpwd.dirty)">
                 <div style="color: red">Both passwords dont match</div>
                 <!-- question mark to supress the null object error-->
               </div>
@@ -65,9 +47,7 @@
       </div>
       <div class="bg-blue py-4">
         <div class="row px-3">
-          <small class="ml-4 ml-sm-5 mb-2"
-            >Copyright &copy; 2021. All rights reserved.</small
-          >
+          <small class="ml-4 ml-sm-5 mb-2">Copyright &copy; 2021. All rights reserved.</small>
         </div>
       </div>
     </div>
