--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -18,9 +18,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5" style="margin-top: 70px;">
           <form #generateOtp="ngForm" (ngSubmit)="sendOtp()">
-            <div class="card2 card border-0 px-4 py-5">
+            <div class="card2 card border-0 px-4 py-4">
               <div class="row px-3">
                 <label class="mb-1">
                   <h6 class="mb-0 text-sm">Email Address</h6>
@@ -53,7 +53,7 @@
             </div>
           </form>
 
-          <div *ngIf="flag">
+          <div *ngIf="flag" style=" margin-top: 30px;" class="card2 card border-0 px-3 py-3">
             <form #OTPForm="ngForm" (ngSubmit)="verifyOtp()">
               <div class="row px-3">
                 <label class="mb-1">
