--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,3 +5,48 @@ body {
 .mySlides {
   display: none;
 }
+.container {
+  position: relative;
+  width: 90%;
+  
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+  
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color:rgb(85, 77, 77);
+ 
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .6s ease;
+  opacity: 0.5;
+}
+
+.container:hover .overlay {
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
