--- a/src/app/components/pay-joining-fee/pay-joining-fee.component.html
+++ b/src/app/components/pay-joining-fee/pay-joining-fee.component.html
@@ -5,35 +5,26 @@
         <div class="col-lg-6">
           <div class="card1 pb-5">
             <div class="row">
-              <img
-                src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
-                class="logo"
-              />
+              <img src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/06/Handling-Finances.jpg"
+                class="logo" />
             </div>
             <div class="row px-3 justify-content-center mt-4 mb-5 border-line">
-              <img
-                src="https://d1qeumaypnte8e.cloudfront.net/new_home_images/hero-images.svg"
-                class="image"
-              />
+              <img src="https://d1qeumaypnte8e.cloudfront.net/new_home_images/hero-images.svg" class="image" />
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div class="card2 card border-0 px-4 py-5">
+        <div class="col-lg-5" style="margin-top: 120px;">
+          <div class="card2 card border-0 px-4 py-4">
             <div class="row px-3">
               <div class="pay">
-                <h2>Card type : {{ cardType }}</h2>
+                <h2>Card Type : {{ cardType }}</h2>
                 <p *ngIf="flag">Pay joining of &#8377; 1000</p>
                 <p *ngIf="!flag">Pay Joining of &#8377; 2000</p>
                 <br />
               </div>
             </div>
             <div class="row mb-3 px-3">
-              <button
-                type="submit"
-                class="btn btn-blue text-center"
-                (click)="payJoiningFee()"
-              >
+              <button type="submit" class="btn btn-blue text-center" (click)="payJoiningFee()">
                 Registration fee
               </button>
             </div>
@@ -42,9 +33,7 @@
       </div>
       <div class="bg-blue py-4">
         <div class="row px-3">
-          <small class="ml-4 ml-sm-5 mb-2"
-            >Copyright &copy; 2021. All rights reserved.</small
-          >
+          <small class="ml-4 ml-sm-5 mb-2">Copyright &copy; 2021. All rights reserved.</small>
         </div>
       </div>
     </div>
