--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -203,6 +203,13 @@
             >Generate Card</a
           >
         </button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          <a
+            style="text-decoration: none; color: white"
+            (click)="View(user.userId)"
+            >View Documents</a
+          >
+        </button>
       </div>
     </div>
   </div>
