--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="user">
-    Aadhar Card : <img src="http://localhost:8181/aadharCard/{{ user.aadharCard }}" target="_blank"/>
-    <br>
-    Pan Card : <img src="http://localhost:8181/panCard/{{ user.panCard }}" target="_blank" />
+  Aadhar Card :
+  <img src="http://localhost:8181/aadharCard/{{ user.aadharCard }}" />
+  <br />
+  Pan Card : <img src="http://localhost:8181/panCard/{{ user.panCard }}" />
 </div>
