--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -23,4 +23,6 @@
   {{ user.aadharNumber }}<br />
   <label><b>Card type : </b></label>
   {{ user.cardType }}<br />
+  <!-- <label><b>Document status : </b></label>
+  {{ user.docUpload }}<br /> -->
 </div>
