--- a/src/app/components/productpurchased/productpurchased.component.html
+++ b/src/app/components/productpurchased/productpurchased.component.html
@@ -4,7 +4,7 @@
 <div class="container" style="margin-top: 80px">
   <div class="row">
     <div
-      *ngFor="let product of products"
+      *ngFor="let product of products; let i = index"
       class="col-md-3 thumbnail"
       style="border: 1px solid; margin: 20px"
     >
@@ -28,13 +28,21 @@
       <h3 class="card-text" *ngIf="product.amount_remaining <= 0">
         Payment Completed
       </h3>
-      <button
-        class="w3-button w3-black w3-margin-bottom"
-        (click)="payEmi(product)"
-        *ngIf="product.amount_remaining > 0"
+      <ng-container *ngIf="!product.isLoading; else showLoader">
+        <button
+          class="w3-button w3-black w3-margin-bottom"
+          (click)="payEmi(product, i)"
+          *ngIf="product.amount_remaining > 0"
+        >
+          PayEmi
+        </button>
+      </ng-container>
+
+      <ng-template #showLoader
+        ><button class="w3-button w3-black w3-margin-bottom" disabled>
+          Processing...
+        </button></ng-template
       >
-        PayEmi
-      </button>
     </div>
   </div>
 </div>
